@@ -1,21 +1,19 @@
-ext {
-    datastoreGithubBranch = "8.0.x"
-    checkOutDir = "build/checkout"
-    explicitGormSrc = System.getProperty("gorm.src") ?: (project.hasProperty('gorm.src') ? project.getProperty("gorm.src") : null)
-    gormSrc = explicitGormSrc ? file(explicitGormSrc).absolutePath : "$checkOutDir/gorm-src"
-    zipFile = "build/source.zip"
-
-    coreProjects = [
-            'core',
-            'gorm'
-    ]
-
+plugins {
+    id 'groovy'
+    id 'org.asciidoctor.jvm.convert' version "$asciidoctorGradleVersion"
 }
 
-version rootProject.version
+version = projectVersion
 
-apply plugin: 'groovy'
-apply plugin: 'org.asciidoctor.jvm.convert'
+ext {
+    isReleaseVersion = !version.endsWith('SNAPSHOT')
+    datastoreGithubBranch = '9.0.x'
+    checkoutDirName = 'checkout'
+    explicitGormSrc = System.getProperty('gorm.src') ?: findProperty('gorm.src')
+    gormSrc = (explicitGormSrc ? file(explicitGormSrc) : "$checkoutDirName/gorm-src") as String
+    zipFile = 'build/source.zip'
+    coreProjects = ['grails-datastore-core', 'grails-datastore-gorm']
+}
 
 configurations {
     documentation {
@@ -25,131 +23,134 @@ configurations {
     }
 }
 
+tasks.register('resolveMongodbVersion') {
+    group = 'documentation'
+    description = 'Resolve MongoDB Version from the BOM'
+    ext.resolved = configurations.compileClasspath
+            .resolvedConfiguration
+            .resolvedArtifacts
+            .find {
+                it.moduleVersion.id.group == 'org.mongodb' &&
+                it.moduleVersion.id.name.contains('mongodb-driver-sync')
+            }.moduleVersion.id.version
+    logger.lifecycle('Resolved MongoDB Driver version for Guide links: {}', resolved)
+}
+
 
 dependencies {
-    documentation "org.fusesource.jansi:jansi"
-    documentation "org.apache.groovy:groovy"
-    documentation "org.apache.groovy:groovy-templates"
-    documentation "org.apache.groovy:groovy-dateutil"
-    documentation "com.github.javaparser:javaparser-core"
-    for(p in coreProjects) {
-        documentation "org.grails:grails-datastore-$p"
+
+    documentation platform("org.grails:grails-bom:$grailsVersion")
+    documentation 'org.fusesource.jansi:jansi'
+    documentation 'org.apache.groovy:groovy'
+    documentation 'org.apache.groovy:groovy-templates'
+    documentation 'org.apache.groovy:groovy-dateutil'
+    documentation 'com.github.javaparser:javaparser-core'
+    coreProjects.each {
+        documentation "org.grails:$it"
     }
-    project.rootProject.subprojects.findAll { !it.name.contains('-rx-') }.each { subproject ->
-        if(subproject.name != "docs" && !subproject.name.startsWith('examples')) {
-            documentation project(":$subproject.name")
-        }
-    }
+    rootProject.subprojects
+            .findAll { it.findProperty('apiDocs') }
+            .each { documentation project(":$it.name") }
+
+    // These are added to be able to resolve the mongo version from grails-bom
+    // in the resolveMongodbVersion task
+    implementation platform("org.grails:grails-bom:$grailsVersion")
+    implementation 'org.mongodb:mongodb-driver-sync'
 }
 
 asciidoctor {
-    resources {
-        from("${project.projectDir}/src/docs/images")
-        into "${project.projectDir}/images"
-    }
-
-    attributes  'experimental'  : 'true',
-                'compat-mode'   : 'true',
-                'toc'           : 'left',
-                'icons'         : 'font',
-                'reproducible'  : '',
-                'version'       : project.version,
-                'pluginVersion' : project.version,
-                'mongoDriverVersion': mongodbDriverVersion,
-                'sourcedir'     : "${project.rootDir}"
-
     baseDirFollowsSourceDir()
+    attributes('experimental': 'true',
+               'compat-mode': 'true',
+               'toc': 'left',
+               'icons': 'font',
+               'reproducible': '',
+               'version': projectVersion,
+               'pluginVersion': projectVersion,
+               'mongoDriverVersion': resolveMongodbVersion.resolved,
+               'sourcedir': "$project.rootDir")
+
+    jvm {
+        jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED')
+    }
 }
 
-task fetchSource {
+tasks.register('fetchSource') {
 
-    outputs.dir layout.buildDirectory.dir('checkout')
-    inputs.properties(branch: datastoreGithubBranch)
+    // These are used to determine if the task is UP-TO-DATE
+    outputs.dir(layout.buildDirectory.dir(checkoutDirName))
+    inputs.property('branch', datastoreGithubBranch)
 
     onlyIf {
-        println "GORM SRC=$explicitGormSrc"
+        // Only download if no local GORM source is provided
         return !explicitGormSrc
     }
 
     doLast {
-        ant.mkdir dir: project.buildDir
-        ant.mkdir dir: checkOutDir
-
-        println "Downloading GORM source code."
-        if (isReleaseVersion) {
-            ant.get src: "https://github.com/grails/grails-data-mapping/archive/refs/tags/v${datastoreVersion}.zip", dest: zipFile, verbose: true
-        } else {
-            ant.get src: "https://github.com/grails/grails-data-mapping/archive/refs/heads/${datastoreGithubBranch}.zip", dest: zipFile, verbose: true
+        def checkoutDir = layout.buildDirectory.dir(checkoutDirName).get().asFile
+        ant.mkdir(dir: layout.buildDirectory.get().asFile)
+        ant.mkdir(dir: checkoutDir)
+        logger.lifecycle('Downloading GORM source code...')
+        def ref = isReleaseVersion ? "tags/v$datastoreVersion" : "heads/$datastoreGithubBranch"
+        ant.get(src: "https://github.com/grails/grails-data-mapping/archive/refs/${ref}.zip", dest: zipFile, verbose: true)
+        ant.unzip(src: zipFile, dest: checkoutDir) {
+            mapper(type: 'regexp', from: '(grails-\\S*?/)(.*)', to: "gorm-src/\\2")
         }
-        ant.unzip src: zipFile, dest: checkOutDir, {
-            mapper type: "regexp", from: "(grails-\\S*?/)(.*)", to: "gorm-src/\\2"
-        }
-        println "GORM source code downloaded."
+        logger.lifecycle('GORM source code downloaded!')
     }
 }
 
-task copyDocs(type: Copy, dependsOn:asciidoctor) {
+tasks.register('copyDocs', Copy) {
+    dependsOn('asciidoctor')
     mustRunAfter('asciidoctor', 'groovydoc', 'copyResources')
-    finalizedBy "cleanAsciidoc"
-    from project(":docs").layout.buildDirectory.dir("docs/asciidoc")
-    into project(":docs").layout.buildDirectory.dir("docs/manual")
+    finalizedBy('cleanAsciidoc')
+    from(layout.buildDirectory.dir('docs/asciidoc'))
+    into(layout.buildDirectory.dir('docs/manual'))
 }
 
-task cleanAsciidoc(type: Delete, dependsOn: copyDocs) {
-    mustRunAfter "copyDocs"
-    delete project(":docs").layout.buildDirectory.dir("docs/asciidoc")
+tasks.register('cleanAsciidoc', Delete) {
+    delete(layout.buildDirectory.dir('docs/asciidoc'))
 }
 
-tasks.withType(Groovydoc) {
-    dependsOn(fetchSource)
-    docTitle = "GORM for MongoDB - ${project.version}"
-    destinationDir = project.file("build/docs/api")
+tasks.withType(Groovydoc).configureEach {
+    dependsOn('fetchSource')
+    docTitle = "GORM for MongoDB - $project.version"
 
-    def files
-    for(p in coreProjects) {
-        if(files == null) {
-            files = project.files("${checkOutDir}/gorm-src/grails-datastore-${p}/src/main/groovy")
-        }
-        else {
-            files += project.files("${checkOutDir}/gorm-src/grails-datastore-${p}/src/main/groovy")
-        }
-    }
-    project.rootProject.subprojects
-                        .findAll { !it.name.contains('-rx-') && !it.name.startsWith('examples') }
-                        .each { subproject ->
-        if(subproject.file('src/main/groovy').exists()) {
-            files += subproject.files("src/main/groovy")
-        }
-    }
-    source = files
+    def sourceFiles = coreProjects.collect {
+        layout.buildDirectory.files("$checkoutDirName/gorm-src/$it/src/main/groovy")
+    }.sum()
+
+    rootProject.subprojects
+        .findAll { it.findProperty('apiDocs') }
+        .each { sourceFiles += it.files('src/main/groovy') }
+
+    source = sourceFiles
+    destinationDir = layout.buildDirectory.dir('docs/api').get().asFile
+    access = GroovydocAccess.PROTECTED
+    processScripts = false
+    includeMainForScripts = false
+    includeAuthor = true
     classpath = configurations.documentation
+    groovyClasspath += configurations.documentation
 }
 
-tasks.withType(org.gradle.api.tasks.javadoc.Groovydoc) {
-    configure {
-        access = GroovydocAccess.PRIVATE
-        processScripts = false
-        includeMainForScripts = false
-        includeAuthor = true
-        groovyClasspath += configurations.documentation
-    }
+tasks.register('copyResources', Copy) {
+    from(layout.projectDirectory.dir('src/docs/resources'))
+    into(layout.buildDirectory.dir('docs'))
 }
 
-task copyResources(type:Copy) {
-    from 'src/docs/resources'
-    into "${project.layout.buildDirectory.get()}/docs"
+tasks.register('docs') {
+    dependsOn('asciidoctor', 'copyDocs', 'cleanAsciidoc', 'groovydoc', 'copyResources',
+        rootProject.subprojects
+            .findAll { it.findProperty('apiDocs') }
+            .collect { ":${it.name}:groovydoc" }
+    )
+    finalizedBy('assembleDocsDist')
 }
 
-task docs(dependsOn:[asciidoctor, copyDocs, cleanAsciidoc, groovydoc, copyResources] + subprojects.findAll { project -> project.tasks.findByName('groovydoc')}
-                .collect { project -> project.tasks.groovydoc })
-
-task assembleDocsDist(type: Zip) {
-    dependsOn docs, copyDocs
-    from "${project.layout.buildDirectory.get()}/docs"
-    include '*'
-    include '*/**'
+tasks.register('assembleDocsDist', Zip) {
+    dependsOn('docs', 'copyDocs')
+    from(layout.buildDirectory.dir('docs'))
     archiveFileName = "${project.name}-${project.version}.zip"
     destinationDirectory = project.layout.buildDirectory.dir('distributions')
 }
-
-docs.finalizedBy assembleDocsDist
